# literature-synthesis-engine

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  ROADMAP.md  SECURITY_REVIEW.md  app_paths.py  app_pdf.py  app_server.py  bundled_credentials.template.py  conftest.py  longcovid.spec  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  tests.yml
config/: extraction_schema.py  schema.sql  schema_v2_migration.sql  schema_v31_migration.sql  schema_v3_2_migration.sql  schema_v3_migration.sql  settings.py
config/outcome_dictionary/: long_covid.json
config/prompts/: arbiter_sonnet.txt  contradiction_check.txt  due_diligence_sonnet.txt  executive_summary_sonnet.txt  extraction_sonnet.txt  heterogeneity_analysis.txt  reflection_sonnet.txt  synthesis_sonnet.txt  triage_haiku.txt
docs/: API.md  FILE_TREE.md  SPEC_V31_DISCREPANCIES.md  SPEC_V3_DISCREPANCIES.md  V31_MASTER_PLAN.md  V31_PRELECTURA.md  executive_summary.md  scientific_preprint.md  technical_documentation.md
eval/: 00_START_HERE.md  01_OVERVIEW.md  02_ARCHITECTURE.md  03_METHODOLOGY.md  04_V31_CHANGES.md  05_LIMITATIONS_RISKS.md  06_EVAL_RUBRIC.md  07_RECENT_CHANGES.md  08_VERIFICATION_LOG.md
examples/: README.md
methodology/: __init__.py  case_definition.py  emcu.py  extraction_schema.py  flow_record.py  grade_engine.py  integration.py  outcome_dictionary.py  output_ceiling.py  prevalence.py  provenance_registry.py  reconciliation.py  rob_tools.py  synthesis_gating.py
pipeline/: phase1_ingest.py  phase2_filter.py  phase3_extract.py  phase4_store.py  phase5_analyze.py  phase6_report.py  runner.py
pipeline/sources/: openalex.py  unpaywall.py
templates/: app.html  due_diligence.md.j2  executive_summary.md.j2  report.html.j2  report.md.j2
tests/: conftest.py  test_case_definition_gating.py  test_emcu_identity.py  test_extraction_integrity.py  test_frequency_not_prevalence.py  test_gemini_client.py  test_grade_per_outcome.py  test_guardrails.py  test_integration_glue.py  test_layer_reconciliation.py  test_method_preconditions.py  test_openalex.py  test_outcome_normalisation.py  test_output_ceiling.py  test_phase5_stats.py  test_provenance_integrity.py  test_rob_tool_routing.py  test_templates_render.py
tests/e2e/: test_smoke_30_3.py
tests/fixtures/: extraction_valid.json  pmc_sample_full.xml  pmc_sample_messy.xml
tests/integration/: test_phase3_mocked.py  test_phase6_enterprise.py
tests/unit/: test_credibility.py  test_gemini_client.py  test_meta_analysis.py  test_phase5_pure.py  test_product.py  test_reports.py  test_resilience.py  test_run_context.py  test_scoring.py  test_sources.py  test_umls_normalizer.py  test_v31_followups.py  test_validation_engine.py  test_xml_parser.py
utils/: checkpointing.py  claude_client.py  enterprise_report.py  export_citations.py  export_docx.py  gemini_client.py  logging_setup.py  meta_stats.py  preflight.py  report_builders.py  resilience.py  retraction.py  run_context.py  run_manifest.py  run_registry.py  supabase_client.py  umls_client.py  umls_normalizer.py  validation_engine.py  xml_parser.py
