[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "literature-synthesis-engine"
version = "3.1.0"
description = "Automated, calibrated synthesis of biomedical literature with literal-quote provenance, two-step LLM extraction with arbiter reconciliation, UMLS / MeSH normalisation, and Cohen's Kappa validation."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Hamsa" }]
requires-python = ">=3.12,<3.13"
keywords = [
    "literature-review",
    "systematic-review-automation",
    "biomedical-nlp",
    "meta-analysis",
    "claude",
    "anthropic",
    "pubmed",
    "pmc",
    "medrxiv",
    "quadas",
    "grade",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "flask>=3.0",
    "jinja2>=3.1",
    "anthropic>=0.40",
    "httpx[http2]>=0.27",
    "tenacity>=8.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "supabase>=2.0",
    "biopython>=1.83",
    "lxml>=5.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "markdown>=3.5",
    "reportlab>=4.0",
    "rich>=13.0",
    # v3.1
    "statsmodels>=0.14",   # P3 — Egger's regression
    "pymare>=0.0.4",       # P3 — DerSimonian–Laird reference
    "rapidfuzz>=3.0",      # P2 — UMLS name matching
    "python-docx>=1.1",    # P6 — editable DOCX deliverable
    "openpyxl>=3.1",       # P6 — evidence_table.xlsx supplement
    "pymupdf>=1.24",       # P4 — Unpaywall PDF text extraction
]

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]
# Reviewer B on Gemini Flash (REVIEWER_B_PROVIDER=gemini). Optional: the engine
# imports and runs without it; only an actual Gemini run needs the SDK.
gemini = ["google-genai>=2.0"]
dev = ["ruff>=0.4", "pytest>=8.0", "pytest-mock>=3.10", "respx>=0.21", "pytest-cov>=5.0"]

[project.scripts]
literature-synthesis-engine = "app_server:main"

[project.urls]
Homepage = "https://github.com/your-user/literature-synthesis-engine"
Documentation = "https://github.com/your-user/literature-synthesis-engine/tree/main/docs"
Issues = "https://github.com/your-user/literature-synthesis-engine/issues"

[tool.setuptools]
py-modules = ["app_server", "app_paths", "app_pdf", "bundled_credentials"]

[tool.setuptools.packages.find]
include = ["config*", "pipeline*", "utils*", "templates*"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
# Pragmatic for a research codebase: lint real bugs, not stylistic line length
# (prompts and SQL strings legitimately run long). E402 is ignored because the
# entry points intentionally install bundled credentials before importing the
# pipeline (PyInstaller spawn ordering requirement).
ignore = ["E501", "E741", "E402"]

[tool.pytest.ini_options]
markers = [
    "live: end-to-end tests that hit real APIs (Anthropic/NCBI); run manually only",
]
testpaths = ["tests"]
addopts = "-m 'not live'"
